SW-8558 - Fixed icon wrap on service drop down - added CCS2 :after to the existing CCS3 pseudo elements - Fixed mobile issues when clicking on the drop down

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/header.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/header.less
@@ -207,9 +207,12 @@
 
         .entry--service {
 	        .unitize-width(166);
+	        .unitize-padding(0, 8);
             position: relative;
             border-right: 1px solid @borderColor;
+            text-align: center;
 
+            &:after,
             &::after {
                 .unitize(-2, 16, top);
                 content: "\e612";
